# mdbook-nix

./: Cargo.toml  README.md  flake.nix
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md
book/theme/: highlight-nix.js
src/: lib.rs  main.rs  nix_repl.rs
src/snapshots/: mdbook_nix__demo.snap  mdbook_nix__math.snap
