[package]
name = "mdbook-nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.2.2"
insta = "1.29.0"
mdbook = "0.4.28"
pulldown-cmark = { version = "0.9.2", features = ["serde"] }
pulldown-cmark-to-cmark = "10.0.4"
rexpect = { git = "https://github.com/phaer/rexpect.git", branch ="skip-ansi-escape-codes" }
semver = "1.0.17"
serde_json = "1.0.96"
